Describe what you changed here

--- a/index.html
+++ b/index.html
@@ -754,7 +754,7 @@
     <section id="home" class="hero-section">
         <div class="container">
             <div class="hero-content">
-                <img src="img/Passsport size pic.jpeg" alt="Mithali Kunder" class="profile-image">
+                <img src="./img/P230970114_MithaliKunder.jpg" alt="Mithali Kunder" class="profile-image">
                 <h1 class="hero-title">Creative Designer<br>& Developer</h1>
                 <p class="hero-subtitle">Turning Ideas Into Impactful Digital Experiences</p>
                 <p class="hero-description">I blend design, technology, and strategy to create solutions that connect with audiences and achieve business goals. Let's bring your vision to life!</p>
@@ -956,7 +956,7 @@
                                 <div><i class="fas fa-palette"></i>Attractive Colors</div>
                                 <div><i class="fas fa-mobile-alt"></i> Responsive</div>
                             </div>
-                            <a href="https://mithali123.github.io/Portfolio/" class="btn-project btn-project-primary" style="width: 100%;">
+                            <a href="https://mithali123.github.io/MK-Portfolio/" class="btn-project btn-project-primary" style="width: 100%;">
                                 <i class="fas fa-external-link-alt"></i> View Live Site
                             </a>
                         </div>
