Describe what you changed here

--- a/index.html
+++ b/index.html
@@ -792,26 +792,52 @@
                     </div>
                 </div>
                 <div class="col-lg-6">
-                    <div class="certifications animate-on-scroll">
-                        <h5 class="mb-4">Certifications</h5>
-                        <div class="cert-item mb-3 p-3">
-                            <i class="fas fa-certificate text-warning me-2"></i>
-                            Foundations of Project Management – Coursera
-                        </div>
-                        <div class="cert-item mb-3 p-3">
-                            <i class="fas fa-certificate text-warning me-2"></i>
-                            Developer and Technology Job Simulation – Accenture Forage
-                        </div>
-                        <div class="cert-item mb-3 p-3">
-                            <i class="fas fa-certificate text-warning me-2"></i>
-                            Deloitte Australia Cyber Security Virtual Experience – Forage
-                        </div>
-                        <div class="cert-item mb-3 p-3">
-                            <i class="fas fa-certificate text-warning me-2"></i>
-                            GenAI Powered Data Analytics – Tata iQ via Forage
-                        </div>
-                    </div>
-                </div>
+    <div class="certifications animate-on-scroll">
+        <h5 class="mb-4">Certifications</h5>
+
+        <div class="cert-item mb-3 p-3">
+            <i class="fas fa-certificate text-warning me-2"></i>
+            Foundations of Project Management – Coursera
+        </div>
+
+        <div class="cert-item mb-3 p-3">
+            <i class="fas fa-certificate text-warning me-2"></i>
+            Developer and Technology Job Simulation – Accenture Forage
+        </div>
+
+        <div class="cert-item mb-3 p-3">
+            <i class="fas fa-certificate text-warning me-2"></i>
+            Deloitte Australia Cyber Security Virtual Experience – Forage
+        </div>
+
+        <div class="cert-item mb-3 p-3">
+            <i class="fas fa-certificate text-warning me-2"></i>
+            GenAI Powered Data Analytics – Tata iQ via Forage
+        </div>
+
+        <!-- New Certificates -->
+        <div class="cert-item mb-3 p-3">
+            <i class="fas fa-certificate text-warning me-2"></i>
+            Sigma Bootcamp Certified – January 2025
+        </div>
+
+        <div class="cert-item mb-3 p-3">
+            <i class="fas fa-certificate text-warning me-2"></i>
+            Big Data Certification – IBM via Coursera (Oct 2024)
+        </div>
+
+        <div class="cert-item mb-3 p-3">
+            <i class="fas fa-certificate text-warning me-2"></i>
+            Build a Webpage with HTML & CSS – Coursera
+        </div>
+
+        <div class="cert-item mb-3 p-3">
+            <i class="fas fa-certificate text-warning me-2"></i>
+            Cloud Computing Basics (Cloud 101) – Coursera
+        </div>
+    </div>
+</div>
+
             </div>
         </div>
     </section>
