Describe what you changed here

--- a/index.html
+++ b/index.html
@@ -1034,7 +1034,7 @@
                                 <div><i class="fas fa-users text-success me-2"></i> Contact groups</div>
                             </div>
                             <div class="project-actions">
-                                <a href="#" class="btn-project btn-project-secondary">
+                                <a href="https://github.com/Mithali123/"class="btn-project btn-project-secondary">
                                     <i class="fab fa-github"></i> Code
                                 </a>
                             </div>
